Updated and cleaned converters